# Scrambler

./: pyproject.toml  pytest.ini  readme.md
config/: env.py  example.env
scrambler/: forms.py  urls.py  views.py
scrambler/tests/: test_forms.py  test_scrambler.py  test_views.py
templates/: base.html  results.html  upload.html
texteditor/: asgi.py  settings.py  urls.py  wsgi.py
