[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "django-text-scrambler"
version = "0.1.0"
description = "A Django web application for scrambling words in uploaded text files."
authors = [
    { name = "Tomasz Męczkowski", email = "tomasz.meczkowski@gmail.com" }
]
dependencies = [
    "Django>=5.2.6,<6.0",
    "django-environ>=0.12.0"
]
requires-python = ">=3.10"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-django>=4.11",
]